<resources>
    <string name="app_name">MoviesExample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_of_the_movie">Name of the Movie</string>
    <string name="overview">Overview</string>
    <string name="release_date">Release date :</string>
    <string name="release_date_example">23 june 2017</string>
    <string name="score">Score :</string>
    <string name="score_example">7.9</string>
    <string name="overview_example">OverviewOverwiewOverwiew OverviewOverwiewOverwiew OverviewOverwiewOverwiew</string>
    <string name="movies_app">Movies App</string>
</resources>