<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.detail.DetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movies_details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/name_of_the_movie"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/movies_details_header_container_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintTop_toBottomOf="@+id/movies_details_title">


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/movies_details_image_banner"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movies_details_header_container_card" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/movies_details_body_container_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movies_details_header_container_card">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/movies_details_body_container_constraint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">


                    <ImageView
                        android:id="@+id/img_detail_favorite"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_favorite_border_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/movies_details_body_overview_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/overview"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/movies_details_date_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/release_date"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/movies_details_body_overview_label" />

                    <TextView
                        android:id="@+id/movies_details_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date_example"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@+id/movies_details_date_label"
                        app:layout_constraintTop_toBottomOf="@+id/movies_details_body_overview_label" />

                    <TextView
                        android:id="@+id/movies_details_score_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/score"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/movies_details_date_label" />

                    <TextView
                        android:id="@+id/movies_details_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/score_example"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@+id/movies_details_score_label"
                        app:layout_constraintTop_toBottomOf="@+id/movies_details_date_label" />

                    <TextView
                        android:id="@+id/movies_details_body_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overview_example"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/movies_details_score_label" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@+id/movies_details_body_container_card"
                tools:ignore="MissingConstraints">

                <!--                <androidx.recyclerview.widget.RecyclerView-->
                <!--                    android:id="@+id/trailers_recycler_view"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:background="@color/teal_200"-->
                <!--                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
                <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
                <!--                    app:layout_constraintEnd_toEndOf="parent"-->
                <!--                    app:layout_constraintStart_toStartOf="parent"-->
                <!--                    tools:listitem="@layout/trailer_item" />-->

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressDialogDetailFragment"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:indeterminateTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>



